<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/llTabs"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/tvIconSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_awesome_5_pro_regular_400"
                android:text="@string/search_icon"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvTitleSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#80FFFFFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/llFavourites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/tvIconFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_awesome_5_pro_regular_400"
                android:text="@string/favorite_icon"
                android:textSize="24sp"
                android:textColor="@color/colorLightGray"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvTitleFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite_text"
                android:textColor="@color/colorLightGray"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>