<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_favourites_background"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvFavourites"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Favourites Pictures"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/tvSortUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/sort_up_icon"
            android:fontFamily="@font/font_awesome_5_pro_regular_400"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvSortDown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/sort_down_icon"
            android:fontFamily="@font/font_awesome_5_pro_regular_400"
            android:textSize="18sp"
            android:gravity="center"/>

        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:background="#80FFFFFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvDeleteAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/trash_icon"
            android:fontFamily="@font/font_awesome_5_pro_regular_400"
            android:textSize="18sp"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavourites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintTop_toBottomOf="@id/llSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>